--- a/package.json
+++ b/package.json
@@ -14,9 +14,17 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "gatsby": "^2.18.4",
+    "gatsby-plugin-react-helmet": "^3.1.16",
+    "gatsby-source-filesystem": "^2.1.40",
+    "gatsby-source-wordpress": "^3.1.51",
+    "gatsby-transformer-remark": "^2.6.39",
+    "innertext": "^1.0.3",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
